--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="sleepy-story" class="anchor" href="#sleepy-story"><span class="octicon octicon-link"></span></a>Sleepy-Story</h1>
-
-<p>By verin555, ScottButcher (that's me), and ElysianTail</p>
+        <p>By verin555, ScottButcher (that's me), and ElysianTail</p>
 
 <p>This is a story that is hopefully going to be uploaded on <a href="http://www.mcstories.com/">mcstories</a>. 
 It is in reality a thinly veiled advertisement for <a href="http://www.sleepychat.com/">sleepychat</a>, a chatting site for hypnotists and subjects, which needs more love.</p>
 
+<h2>
+<a name="plot" class="anchor" href="#plot"><span class="octicon octicon-link"></span></a>Plot</h2>
+
 <p>The story centers around a girl name Samantha who is frustrated with a hypnosis site (Omegle, but we don't mention it by name), but a friend tells her about Sleepychat and she has all kinds of wacky adventures. She starts out in matchmaking, later does stuff in the public chat, and <em>maybe</em> she'll do skype eventually, although she isn't comfortable with that at the begining. Also, there's lots of pop-culture references, and several of the people she meets on sleepychat are regulars in the sleepychat community</p>
 
-<p>Also, not sure how the others have been picturing her but I (scott) imagine her kinda like this: 
-<img src="http://i.imgur.com/m41apuO.jpg" alt="Samantha"></p>
+<p>Also, not sure how the others have been picturing her but I (Scott) imagine her kinda like this: 
+<img src="http://i.imgur.com/m41apuO.jpg" alt="Samantha is hot"></p>
 
 <p><a href="http://hypnohub.net/post/show/12153?pool_id=150">Source</a></p>
       </section>
