--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@ It is in reality a thinly veiled advertisement for <a href="http://www.sleepycha
 <h2>
 <a name="plot" class="anchor" href="#plot"><span class="octicon octicon-link"></span></a>Plot</h2>
 
-<p>The story centers around a girl name Samantha who is frustrated with a hypnosis site (Omegle, but we don't mention it by name), but a friend tells her about Sleepychat and she has all kinds of wacky adventures. She starts out in matchmaking, later does stuff in the public chat, and <em>maybe</em> she'll do skype eventually, although she isn't comfortable with that at the begining. Also, there's lots of pop-culture references, and several of the people she meets on sleepychat are regulars in the sleepychat community</p>
+<p>The story centers around a girl name Samantha who is frustrated with a hypnosis site (Omegle, but we don't mention it by name), but a friend tells her about Sleepychat and she has all kinds of wacky adventures. She starts out in matchmaking, later does stuff in the public chat, and <em>maybe</em> she'll do skype eventually, although she isn't comfortable with that at the begining. Also, there's lots of pop-culture references, and several of the people she meets on sleepychat are regulars in the sleepychat community. The story is going to be mostly within the bounds of reality, although some parts of hynosis are going to be exagerated to make for a better story.</p>
 
 <p>Also, not sure how the others have been picturing her but I (Scott) imagine her kinda like this: 
 <img src="http://i.imgur.com/m41apuO.jpg" alt="Samantha is hot"></p>
 
 <p><a href="http://hypnohub.net/post/show/12153?pool_id=150">Source</a></p>
+
+<p>Note: the story is currently a work in progress</p>
       </section>
     </div>
 
