--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ It is in reality a thinly veiled advertisement for <a href="http://www.sleepycha
 <p>Also, not sure how the others have been picturing her but I (Scott) imagine her kinda like this: 
 <img src="http://i.imgur.com/m41apuO.jpg" alt="Samantha is hot"></p>
 
-<p><a href="http://hypnohub.net/post/show/12153?pool_id=150">Source</a></p>
+<p><a href="http://hypnohub.net/post/show/12153?pool_id=150">Image source</a></p>
 
-<p>Note: the story is currently a work in progress</p>
+<p>Note: the story is currently a work in progress, but you can download the .txt files up at the top. If you see any problems, use github to submit an issue or fork it.</p>
       </section>
     </div>
 
