Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Sleepy-story : It&#39;s an erotic hypnosis story, about a girl named Samantha who finds out about Sleepychat">
+    <meta name="description" content="Sleepy-story : It&#39;s an erotic hypnosis story about a girl named Samantha who finds out about Sleepychat">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/scottbutcher/sleepy-story">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/scottbutcher/Sleepy-Story">View on GitHub</a>
 
           <h1 id="project_title">Sleepy-story</h1>
-          <h2 id="project_tagline">It&#39;s an erotic hypnosis story, about a girl named Samantha who finds out about Sleepychat</h2>
+          <h2 id="project_tagline">It&#39;s an erotic hypnosis story about a girl named Samantha who finds out about Sleepychat</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/scottbutcher/sleepy-story/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/scottbutcher/sleepy-story/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/scottbutcher/Sleepy-Story/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/scottbutcher/Sleepy-Story/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
