Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/scottbutcher/Sleepy-Story">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/scottbutcher/Sleepy-Story-Samantha">View on GitHub</a>
 
           <h1 id="project_title">Sleepy-story</h1>
           <h2 id="project_tagline">It&#39;s an erotic hypnosis story about a girl named Samantha who finds out about Sleepychat</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/scottbutcher/Sleepy-Story/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/scottbutcher/Sleepy-Story/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/scottbutcher/Sleepy-Story-Samantha/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/scottbutcher/Sleepy-Story-Samantha/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -31,22 +31,22 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>By verin555, ScottButcher (that's me), and ElysianTail</p>
+        <p>Primarially written by Scott Butcher (that's me), but I've had a lot of help from verin555 (who wrote the first chapter), ElysianTail (Who wrote Chapter 5), and a <em>lot</em> of editing help from Hypnonymoose and Anonymoususer2.</p>
 
-<p>This is a story that is hopefully going to be uploaded on <a href="http://www.mcstories.com/">mcstories</a>. 
-It is in reality a thinly veiled advertisement for <a href="http://www.sleepychat.com/">sleepychat</a>, a chatting site for hypnotists and subjects, which needs more love.</p>
+<p>This is a story that is hopefully going to be uploaded on <a href="http://www.mcstories.com/">MCStories</a>. 
+It is in reality a thinly veiled advertisement for <a href="http://www.sleepychat.com/">Sleepychat</a>, a chatting site for hypnotists and subjects, which needs more love.</p>
 
 <h2>
-<a name="plot" class="anchor" href="#plot"><span class="octicon octicon-link"></span></a>Plot</h2>
+<a id="plot" class="anchor" href="#plot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Plot</h2>
 
 <p>The story centers around a girl name Samantha who is frustrated with a hypnosis site (Omegle, but we don't mention it by name), but a friend tells her about Sleepychat and she has all kinds of wacky adventures. She starts out in matchmaking, later does stuff in the public chat, and <em>maybe</em> she'll do skype eventually, although she isn't comfortable with that at the begining. Also, there's lots of pop-culture references, and several of the people she meets on sleepychat are regulars in the sleepychat community. The story is going to be mostly within the bounds of reality, although some parts of hynosis are going to be exagerated to make for a better story. We haven't decided on the whole plot yet, but if you have any ideas or some fetish you don't see enough of, let me know at <a href="mailto:scottcbutcher63@gmail.com">scottcbutcher63@gmail.com</a>!</p>
 
 <p>Also, not sure how the others have been picturing her but I (Scott) imagine her kinda like this: 
 <img src="http://i.imgur.com/m41apuO.jpg" alt="Samantha is hot"></p>
 
-<p><a href="http://hypnohub.net/post/show/12153?pool_id=150">Image source</a></p>
+<p><a href="http://hypnohub.net/post/show/12153?pool_id=150">Image by Zko</a></p>
 
-<p>Note: The story is currently a work in progress, but you can download the .txt files up at the top. If you see any problems, send us an email, use github to submit an issue, or fork it if you're feeling adventurous :)</p>
+<p>Note: The story is currently a work in progress, but you can download the .md (just rename them to .txt) files up at the top. If you see any problems (or have any ideas), send us an email, use github to submit an issue, or fork it if you're feeling adventurous :)</p>
       </section>
     </div>
 
